--- a/index.html
+++ b/index.html
@@ -1,76 +1,14 @@
 <!DOCTYPE html>
-<html lang="zh-CN" class="dark">
+<html lang="zh-CN">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>逃离鸭科夫Mod公告板</title>
-    <link rel="icon" href="/favicon.ico" sizes="any" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="apple-touch-icon" href="/favicon.png" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-    <script>
-      tailwind.config = {
-        darkMode: 'class',
-        theme: {
-          extend: {
-            colors: {
-              brand: {
-                base: '#0f172a',    // 深蓝背景 (Slate 900)
-                card: '#1e293b',    // 卡片背景 (Slate 800)
-                blue: '#3b82f6',    // 标准蓝 (Blue 500)
-                yellow: '#fbbf24',  // 亮黄 (Amber 400)
-                white: '#f8fafc',   // 纯白文本 (Slate 50)
-                muted: '#94a3b8'    // 灰色文本 (Slate 400)
-              }
-            }
-          }
-        }
-      }
-    </script>
-    <style>
-      /* Quill Dark Mode Adapter */
-      .dark .ql-toolbar {
-        background-color: #cbd5e1; /* Slate 300 - Light bg for toolbar so black icons are visible */
-        border-top-left-radius: 0.375rem;
-        border-top-right-radius: 0.375rem;
-        border-color: #334155 !important;
-      }
-      .dark .ql-container {
-        background-color: #1e293b; /* brand-card */
-        color: #f8fafc;
-        border-bottom-left-radius: 0.375rem;
-        border-bottom-right-radius: 0.375rem;
-        border-color: #334155 !important;
-      }
-      /* Quill Light Mode Adapter */
-      .ql-toolbar {
-        background-color: #f8fafc;
-        border-top-left-radius: 0.375rem;
-        border-top-right-radius: 0.375rem;
-      }
-      .ql-container {
-        background-color: #ffffff;
-        border-bottom-left-radius: 0.375rem;
-        border-bottom-right-radius: 0.375rem;
-        min-height: 120px;
-      }
-    </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@18.2.0",
-    "react/": "https://esm.sh/react@18.2.0/",
-    "react-dom": "https://esm.sh/react-dom@18.2.0",
-    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
-    "lucide-react": "https://esm.sh/lucide-react@0.469.0?external=react,react-dom",
-    "react-quill": "https://esm.sh/react-quill@2.0.0?external=react,react-dom"
-  }
-}
-</script>
-</head>
-  <body class="bg-slate-50 text-slate-900 dark:bg-brand-base dark:text-brand-white antialiased transition-colors duration-300">
+    <link rel="icon" href="/favicon.ico" sizes="64x64" />
+    <link rel="apple-touch-icon" href="/favicon.ico" />
+  </head>
+  <body>
     <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
-</body>
+    <script type="module" src="/index.tsx"></script>
+  </body>
 </html>
