:art: 代码质量优化 - 修复56个IDE/TS问题
- 新增typecheck脚本，Worker严格类型检查通过
- 统一短导入路径，删除未使用导出（YAGNI）
- 抽取重复逻辑（DRY），简化条件判断（KISS）
- 补齐异步调用异常处理，修复隐式any类型
- 统一换行符为LF，净减少13行代码

涉及22个文件，遵循KISS/YAGNI/DRY/SOLID原则

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>逃离鸭科夫Mod公告板</title>
+    <title>逃离鸭科夫Mod公告站</title>
     <link rel="icon" href="/favicon.ico" sizes="64x64" />
     <link rel="apple-touch-icon" href="/favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
